- a newline bug fixed in profiler.php
- removed init() method from PHP5_Library interface.
- added __sleep and __wakeup function to DB.php file.
- added new Pager Class / Drivers and Html widgets.
- added HMVC library and hmvc helper.
- replaces  Obullo::instance() function as this() in all files.
- removed Obullo.php from /base/obullo/ directory. Updated Bootstrap.php
- Depreciated using parent::__global() func in all controllers. We moved to Obullo/Controller.php , parent::__global() function
works automatically from now on.
//-----------------------------------------------------------------------------

!!!!!!!!!!!!!!!!!!! NEW TODOS !!!!!!!!!!!!!!!

@todo .. add  log_me(); function alias of log_message();
@todo .. look log_message(); some functions does not work.

remove method chaning.
echo calendar::instance()
->init()
->generate(2006, 10);

@todo .. Add Form_controller (Global) tutorial to user guide .. create a directory called /forms
then create a Form_controller to /parents folder. add common functions to Form controller.
@todo .. add user guide to extending to Core MY_model functionality.
it works in Obullo !
http://www.askaboutphp.com/50/codeigniter-extending-the-native-model-and-make-it-your-own.html 
(CJ Lazell advices)

@todo .. change htaccess rules in userguide DirectoryIndex index.php, index.html
@todo .. Global controllers pattern extends rules, add to userguide..!!!
@todo .. put archived doc meta tag to old user guide base layout ..
@todo .. look at globally set database object from app_controller.
@todo .. change obullo mvc2 names as Obullo GC in web site.            
@todo .. add to GC Map (application flow chart) to web site.                                       


NEXT VERSION
----------------------------------------------------------------

@next version todo .. think a js validator function
 var frmvalidator = new Validator("form");
 frmvalidator.addValidation("firstname","req","Please enter your First Name");