@@ -40,16 +40,14 @@ $parents['directory']['rest']       = 'Rest_controller';
 | Description:
 |
 | If router requests "index.php/members/signup_form" match with regex (_form$)
-| extend rules, then the "all" Controllers which has suffix "_form" will 
-| extend to Global Form_controller .
+| extend rules, then the controller which has "_form" suffix will 
+| extend to Form_controller .
 |
 | @See  Chapters / General Topics / Global Controllers
 | 
 */
 $parents['controller']['(_form$)']   =  'Form_controller';
 $parents['controller']['(bar_*)']    =  'Bar_controller';
-$parents['controller']['blog']    =  'Bar_controller';
-
 
 
 /* End of file parents.php */
