@@ -113,8 +113,13 @@ if ( ! function_exists('current_dir'))
         {
             $separator = ($uri{0} == '/') ? '' : '/';
         }
+        
+        $hmvc = base_register('HMVC');  // if hmvc request exist
+        $D    = $hmvc->fetch_directory();
+
+        $current_dir = ($D != '') ? $D : (string)$GLOBALS['d'];
     
-        return (string)$GLOBALS['d'] . $separator . $uri;
+        return  $current_dir. $separator . $uri;
     }
 }
 // ------------------------------------------------------------------------ 
@@ -129,7 +134,12 @@ if ( ! function_exists('current_class'))
 {
     function current_class()
     {
-        return (string)$GLOBALS['c'];
+        $hmvc = base_register('HMVC');  // if hmvc request exist
+        $C    = $hmvc->fetch_class();
+        
+        $current_class = ($C != '') ? $C : (string)$GLOBALS['c'];
+        
+        return $current_class;
     }
 }
 // ------------------------------------------------------------------------ 
@@ -144,7 +154,12 @@ if ( ! function_exists('current_method'))
 {
     function current_method()
     {
-        return (string)$GLOBALS['m'];
+        $hmvc = base_register('HMVC');  // if hmvc request exist
+        $D    = $hmvc->fetch_directory();
+        
+        $current_method = ($D != '') ? $hmvc->fetch_method() : (string)$GLOBALS['m'];
+        
+        return $current_method;
     }
 }
 // ------------------------------------------------------------------------ 
