@@ -145,12 +145,12 @@ if( ! function_exists('ob_system_close'))
 {
     function ob_system_close()
     {
-        $ob = this();
+        $OB = this();
         
         // Close all PDO connections..        
         foreach(profiler_get('databases') as $db_name => $db_var)
         {
-            $ob->{$db_var} = NULL;
+            $OB->{$db_var} = NULL;
         }
         
         // close all buffers.
