@@ -95,7 +95,7 @@ functionality helpers/session/cookie_driver.php and database_driver.php files.  
 - added HMVC library and hmvc helper.
 - replaces  Obullo::instance() function as this() in all files.
 - removed Obullo.php from /base/obullo/ directory. Updated Bootstrap.php
-- Depreciated using parent::__global() func in all controllers. We moved to Obullo/Controller.php , parent::__global() function
+- Depreciated using parent::__global() func in all controllers. We moved it to Obullo/Controller.php , parent::__global() function
 works automatically from now on.
 //-----------------------------------------------------------------------------
 
@@ -114,7 +114,6 @@ then create a Form_controller to /parents folder. add common functions to Form c
 @todo .. add user guide to extending to Core MY_model functionality.
 it works in Obullo !
 http://www.askaboutphp.com/50/codeigniter-extending-the-native-model-and-make-it-your-own.html 
-(CJ Lazell advices)
 
 @todo .. change htaccess rules in userguide DirectoryIndex index.php, index.html
 @todo .. Global controllers pattern extends rules, add to userguide..!!!
@@ -126,6 +125,10 @@ http://www.askaboutphp.com/50/codeigniter-extending-the-native-model-and-make-it
 
 NEXT VERSION
 ----------------------------------------------------------------
+
+MONGO DB API ( loader::nosql('mongodb'); )
+http://devzone.zend.com/article/12132-Getting-Started-with-MongoDB-and-PHP
+http://lithify.me/en/docs/lithium/data/source/MongoDb
 
 @next version todo .. think a js validator function
  var frmvalidator = new Validator("form");
